--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DocLine</title>
+  <title>Eventy</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
@@ -32,7 +32,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href=""><img width="180px" src="./images/logo.png" alt=""></a>
+        <a class="navbar-brand" href=""><img width="180px" src="./images/f47e0e3375ea4a6496ce6c9b5fc22aa8-removebg-preview.png" alt=""></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
@@ -61,13 +61,13 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1 class="big-heading">Connect with your nearby doctors and see your latest vital signs.</h1>
+          <h1 class="big-heading">Organize and host your events way more easly.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
 
         <div class="col-lg-6">
-          <img class="title-image" src="images/iphone12.png" alt="iphone-mockup">
+          <img class="title-image" src="images/617d0cf95d5bdc85917c9201_iPhone_12_Pro__12__2-removebg-preview.png" alt="iphone-mockup">
         </div>
 
       </div>
@@ -93,13 +93,13 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-bullseye fa-4x"></i>
           <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the doctors, the best doctors.</p>
+          <p>We have all the hosts, the best hosts.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-heart fa-4x"></i>
           <h3 class="feature-title">24/7 Client Service</h3>
-          <p>Find the best for your health or your money back.</p>
+          <p>Find the best for your event or your money back.</p>
         </div>
       </div>
 
@@ -115,14 +115,14 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonial-text">I no longer have to show my medical history to my doctor, He already know it through DocLine.</h2>
+          <h2 class="testimonial-text">I no longer have to waste my time finding the best place for my event, Eventy do the work for me.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="dog-profile">
-          <em>Nejma, Tataouine</em>
+          <em>Meriem, Ghomrassen</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My Grandpa used to face many difficulties to visit the doctor every now and then, but with DocLine's help, he have an easier life. I think.</h2>
+          <h2 class="testimonial-text">My team used to face many difficulties to find the perfect place somtimes, but with Eventy's help, we have an easier life. I think.</h2>
           <img class="testimonial-image" src="images/angela.png" alt="lady-profile">
-          <em>Raja, Mahdia</em>
+          <em>Jaweher, Bir Lahmer</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
@@ -151,7 +151,7 @@
 
   <section class="white-section" id="pricing">
 
-    <h2 class="section-heading">A Plan for Every patient's Needs</h2>
+    <h2 class="section-heading">A Plan for Every client's Needs</h2>
     <p>Simple and affordable price plans for you.</p>
 
     <div class="row">
@@ -159,11 +159,11 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>DocLine Lite</h3>
+            <h3>Eventy Lite</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">Free</h2>
-            <p>1 Consultations Per Week</p>
+            <p>1 Connexion Per Week</p>
             <p>10 Messages Per Week</p>
             <p>Unlimited App Usage</p>
             <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
@@ -174,11 +174,11 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>DocLine Premium</h3>
+            <h3>Eventy Premium</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">DT49 / yr</h2>
-            <p>Unlimited Consultations</p>
+            <p>Unlimited Connexions</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
             <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
@@ -189,12 +189,13 @@
       <div class="pricing-column col-lg-4">
         <div class="card">
           <div style="background-color: #22A39F;" class="card-header">
-            <h3 style="color: #fff;">DocBraclet</h3>
+            <h3 style="color: #fff;">Eventy w Inventy</h3>
+            <h6>for startups and organiations</h6>
           </div>
           <div class="card-body">
-            <h2 class="price-text">DT99</h2>
-            <p>Heartbeat Rate</p>
-            <p>Blood Pressure</p>
+            <h2 class="price-text">DT1999 / yr</h2>
+            <p>All Eventy premium features</p>
+            <p>Acces to Eventy private co-working spaces</p>
             <p>Step Counter</p>
             <button style="background-color: #22A39F;border: none;" class="btn btn-lg btn-block btn-dark" type="button">Pre Order Now!</button>
 
@@ -215,7 +216,7 @@
 
     <div class="container-fluid">
 
-      <h3 class="big-heading" style="font-family:Fira+Sans+Condensed;">Find The Easy Way For A Healthy Life Today.</h3>
+      <h3 class="big-heading" style="font-family:Fira+Sans+Condensed;">Find The Easy Way For A Successful Event Today.</h3>
       <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="download-button btn btn-lg brn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
@@ -230,7 +231,7 @@
       <i class="social-icon fab fa-twitter"></i>
       <i class="social-icon fab fa-instagram"></i>
       <i class="social-icon fas fa-envelope"></i>
-      <p style="color: #22A39F;">© Copyright 2022 SAT Solutions</p>
+      <p style="color: #22A39F;">© Copyright 2022 Techtaooin Inc</p>
     </div>
   </footer>
 
